# shadowing

./: README.md  amm.bst  comments.tex  highlights.tex  main.tex  main_els.tex  refs.bib  supp.tex  svjour3.cls
code/lorenz_density/: CMakeLists.txt  histogram.h  lorenz.h  lorenz_density.cpp  run_binary.py
code/lorenz_map/: fit.py  interpolate.py  lorenz_map.py  lorenz_zmax_10_28_2.67.json  lorenz_zmax_10_28_3.33.json  lorenz_zmax_10_30_2.67.json  lorenz_zmax_15_28_2.67.json  plot.py  shadow.py  shadow_baseline.py
code/lorenz_periodic/: lorenz_periodic.py
code/lorenz_shadow/: shadow_step1.py
code/lorenz_trajectory/: lorenz_trajectory.py
code/tent_quasiphysical/: hist0.py  hist1.py  hist2.py
code/tent_sens_stat/: map.py  plot_density.py  plot_map.py  plucked_map.py
data/: baseline_density_lorenz_zmax_10_28_2.67.json.npy  baseline_density_lorenz_zmax_10_28_3.33.json.npy  baseline_density_lorenz_zmax_10_30_2.67.json.npy  baseline_density_lorenz_zmax_15_28_2.67.json.npy  collect.py  compute_lorenz_stats.py  history.npy  lorenz_periodic_1.npy  lorenz_periodic_2.npy  lorenz_periodic_3.npy  lorenz_shadow_density_lorenz_zmax_10_28_3.33.json.npy  lorenz_shadow_density_lorenz_zmax_10_30_2.67.json.npy  lorenz_shadow_density_lorenz_zmax_15_28_2.67.json.npy  lorenz_zmax_10_28_3.6666666666666665.npy  lorenz_zmax_10_28_4.333333333333333.npy  plot_ensemble.py  plot_lorenz_map_density.py  plot_lorenz_periodic.py  plot_lorenz_zmax_map.py  plot_trajectory.py
figure/: autocrop.py
letter/: letter.tex  responseToReviewers.tex  significance.tex  summaryOfRevisions.tex
(+9 files in other folders)
